<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PR</string>
    <string name="search">Search</string>
    <string name="filter">Filtro</string>
    <string name="select">Select</string>
    <string name="graphic">Graphic</string>
    <string name="data">Data</string>
    <string name="datevendute">Data</string>
    <string name="org">Organizzazione</string>
    <string name="lvlpr">Livello PR</string>
    <string name="dettagliprev">Dettagli prevendite..</string>

    <string-array name="Organizators">
        <item>Notti Studentesche</item>
        <item>Boom</item>
    </string-array>

</resources>